--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -1,26 +1,93 @@
 {% extends 'store/main.html' %}
 {% load static %}
+
+<!-- LOADER -->
+<div id="preloader">
+    <div class="loading_wrap">
+    	<img src="https://bestwebcreator.com/ATZShop/demo/image/loader_logo.png" alt="logo">
+    </div>
+</div>
+<!-- LOADER -->
+
 {% block content %}
+
+{% include "store/carousel.html" %}
+
+{% include "store/banner.html" %}
+
+<section class="popular-products">
+<div class="container">
+    	<div class="row">
+        	<div class="col-12">
+            	<div class="title text-center">
+                	<h4>CATEGORIES</h4>
+                </div>
+            </div>
+        </div>
 	<div class="row">
+		<div class="col-12">
+			<div class="products-slider4 same-nav owl-carousel owl-theme" data-margin="30" data-dots="false" data-nav="true">
 		{% for product in product_categories %}
-			<div class="col-lg-4">
-			<div class="box">
-				<img class="thumbnail" src="{{ product.get_imageURL }}">
-				<div class="box-element product">
-					<h3 style="text-align: center;">{{product.name}}</h3>
-					<hr>
-					<a class="btn btn-outline-success" style="width: 100%;" href="{% url 'show_items' product.id %}">View Items</a>
-
-				</div>
-				</div>
-			</div>
+			<div class="item">
+                    	<div class="product-box common-cart-box">
+                        	<div class="product-img common-cart-img">
+                            	<img width="100%" height="200px" src="{{ product.get_imageURL }}" alt="product-img">
+                                <div class="hover-option">
+                                	<div class="add-cart-btn">
+                                    	<a href="{% url 'show_items' product.id %}" class="btn btn-primary">View Item</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="product-info common-cart-info text-center">
+                            	<a href="product-detail.html" class="cart-name">{{product.name}}</a>
+                            </div>
+                        </div>
+                    </div>
 		{% endfor %}
+		</div>
 	</div>
+</div>
+</div>
+</section>
 
-	<br><br>
-	<blockquote class="blockquote text-center">
-		<p class="mb-0">** That's it! **</p>
-		<footer class="blockquote-footer"> You've scrolled to the end of the List!</footer>
-	</blockquote>
+{% include "store/home_bottom.html" %}
+
+<!-- Home Popup Section -->
+<div class="modal fade bd-example-modal-lg main-popup" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-body p-0">
+                <div class="newsletter-pop-up d-flex">
+                    <div class="popup-img">
+                    	<img src="https://bestwebcreator.com/ATZShop/demo/image/1_popup-img.jpg" alt="popup-img">
+                    </div>
+                    <div class="popup-form text-center">
+                    	<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true"><i class="fa fa-times"></i></span>
+                        </button>
+                    	<div class="popup-logo">
+                        	<img src="http://bakircezve.com/storage/media/o7Z3fzwifjBga5shBOeoFJoLl9p3v9Nl12YIhMlE.png" alt="logo">
+                        </div>
+                        <div class="popup-text">
+                        	<p>Join us Now</p>
+                            <h6>And get hot news about the theme</h6>
+                        </div>
+                    	<form class="subscribe-popup-form" method="post" action="#">
+                            <input name="email" required type="email" placeholder="Enter Your Email">
+                            <button class="btn btn-primary" title="Subscribe" type="submit">Subscribe</button>
+                        </form>
+                        <div class="form-check">
+                            <label>Don't show this popup again!
+                                <input class="defult-check" type="checkbox" checked="checked">
+                                <span class="checkmark"></span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    	</div>
+    </div>
+</div>
+<!-- End Screen Load Popup Section -->
 
 	{% endblock content %}
