--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,24 +1,33 @@
 {% extends 'store/main.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-	<h1 class="display-5">Log In!</h1>
-	<hr class="my-4">
+	<div class="col-12">
+    <div class="white-popup lr-popup">
+    <h4 class="text-center">Login</h4>
 	<form method="POST">
 		{% csrf_token %}
 		{{ form|crispy }}
 		<br>
-		<input type="submit" class="btn btn-primary mb-2" name="submit" , value='Login'>
+		<div class="text-center">
+		<input type="submit" class="btn btn-primary mb-2" name="submit" value='Login'>
+		</div>
+		<div class="form-check text-left">
+                                        <label>Remember me
+                                            <input class="defult-check" type="checkbox" checked="checked">
+                                            <span class="checkmark"></span>
+                                        </label>
+                                        <a href="{% url 'password_reset' %}" class="forgot-password float-right">Forgot Password ?</a>
+                                    </div>
 	</form>
-	<br>
-	<a class="align-middle" href="{% url 'password_reset' %}">Forgotten Your password?</a><br>
-	<h6 class="align-middle">OR</h6>
-	<a class="align-middle" href="{% url 'register' %}">Create a new account!</a>
-	<br><br>
-	<div>
-		<h3>Login with :</h3>
+	<div class="text-center">
+		<h6 class="mt-2 mb-4">Login with :</h6>
 		<a href="{% url 'social:begin' 'google-oauth2' %}">
-			<button type="button" name="button" class="btn btn-danger">Google</button>
+		<button type="button" name="button" class="btn btn-danger mb-2">Google</button>
 		</a>
+        <h6>Don't have an account?</h6>
+        <a href="{% url 'register' %}" class="sign-up">Click here to Sign up</a>	
 	</div>
+	</div>
+</div>
 
 {% endblock %}
