--- a/store/templates/store/payment_success.html
+++ b/store/templates/store/payment_success.html
@@ -1,6 +1,11 @@
-<blockquote class="blockquote text-center" style="text-align: center; padding-top: 100">
-	<h1><p class="mb-0">** Payment Successful **</p></h1>
+{% extends 'store/main.html' %}
+{% load static %}
+
+{% block content %}
+<blockquote class="blockquote text-center" style="text-align: center; padding-top: 100px">
+	<h1><p style="color: green;" class="mb-4"><strong>Payment Successful</strong></p></h1>
 	<h4><p>Go Back ! Check your orders - </p></h4>
 	<br>
-	<a href="{% url 'order_details' %}" class="btn btn-secondary mb-2">View Order</a>
+	<a href="{% url 'order_details' %}" class="btn btn-primary mb-2">View Order</a>
 </blockquote>
+{% endblock %}
